# Koffieboon

./: .gitignore  .gitmodules  BuildCMake.bat  CMakeLists.txt  GenerateCMakeBuildFiles-Clean.bat  GenerateCMakeBuildFiles.bat  Koffieboon.sln  README.md
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Koffieboon.h  kbpch.h
Engine/src/Koffieboon/: Application.cpp  Application.h  Defines.h  EntryPoint.h  Input.h  KeyCodes.h  MouseButtonCodes.h  Window.h
Engine/src/Koffieboon/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Koffieboon/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Koffieboon/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/Koffieboon/Renderer/: Buffer.cpp  Buffer.h  BufferLayout.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Engine/src/Koffieboon/core/: Asserts.cpp  Asserts.h  Logger.cpp  Logger.h
Engine/src/Koffieboon/platform/: PlatformWin32.cpp  PlatformWin32_DEPRECATED.cpp  Window.cpp  Window.h  Window_DEPRECATED.cpp  Window_DEPRECATED.h
Engine/src/Koffieboon/platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h
Engine/src/Koffieboon/platform/Windows/: WindowsGLFW.cpp  WindowsGLFW.h  WindowsInput.cpp  WindowsInput.h
Koffieboon/Engine/: Engine.vcxproj  Engine.vcxproj.filters
Koffieboon/Engine/src/: Defines.h  Koffieboon.h  Test.cpp  Test.h
Koffieboon/Engine/src/Koffieboon/: Application.h  Core.h  Defines.h  Test.cpp  Test.h
Koffieboon/Engine/src/Koffieboon/core/: Asserts.cpp  Asserts.h  Logger.cpp  Logger.h
Koffieboon/Engine/src/Koffieboon/platform/: Platform.h  PlatformWin32.cpp  Window.h
Koffieboon/Playground/: Playground.vcxproj  Playground.vcxproj.filters
Koffieboon/Playground/src/: Main.cpp  PlaygroundApp.cpp
Koffieboon/bin-intermediate/Debug-x64/Engine/: Engine.dll.recipe  Engine.ilk  vc143.idb
Koffieboon/bin-intermediate/Debug-x64/Engine/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Koffieboon/bin-intermediate/Debug-x64/Playground/: Playground.exe.recipe  Playground.ilk  vc143.idb
Koffieboon/bin-intermediate/Debug-x64/Playground/Playground.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Playground/: CMakeLists.txt  Playground.vcxproj  Playground.vcxproj.filters  imgui.ini
Playground/src/: PlaygroundApp.cpp
docs/: APPLICATION_STARTUP.md  BUFFER_LAYOUT.md  NOTES.md
